[package]
name = "splinterdb-sys"
version = "0.1.0"
edition = "2021"
links = "splinterdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.1"

[dependencies]
hex = "0.4"
libc = "0.2.152"
xxhash-rust = { version = "0.8.6", features = ["xxh32"] }

[dev-dependencies]
tempfile = "3.2.0"
